# dotfiles

./: .gitignore  README.md  Xft.Xresources
arch/.config/fontconfig/: fonts.conf
arch/.config/systemd/user/: checkaur.service  checkaur.timer
autostart/.config/autostart/: redshift.desktop  variety.desktop
darkman/.local/share/dark-mode.d/: gtk-theme.sh
darkman/.local/share/light-mode.d/: gtk-theme.sh
dunst/.config/dunst/: dunstrc
git/: .gitconfig
hyprland/.config/hypr/: hyprland.conf
kodi/.kodi/userdata/: kodifs.py
kodi/.kodi/userdata/keymaps/: keyboard.xml
mbp-xmodmap/: .Xmodmap
rofi/.config/rofi/: config  config.rasi  theme.rasi
tmux/: .tmux.conf  launch-tmux.sh
urxvt/: Xresources  tango.Xresources
waybar/.config/waybar/: arch-updates-mon.py  config  gdq_game  mediaplayer.py  style.css  weather.py
xmonad/: .stow-local-ignore
xmonad/.config/: compton.conf  picom.conf
xmonad/.config/autorandr/: .gitignore  settings.ini
xmonad/.config/autostart/: autorandr.desktop
xmonad/.config/xmobar/: arch-updates-mon.py  stdout_watch.py  test_arch_update_mon.py  volmon.py  volmon.sh  weather.py  xmobarrc
xmonad/.config/xmobar/icons/: arch-error-symbolic.xbm  arch-updates-symbolic.xbm  arch-uptodate-symbolic.xbm  spkr_mute.xbm
xmonad/.xmonad/: Xft.Xresources  build  getTrayerGeom.hs  install-deps.sh  stack.yaml  tray.sh  xmoconf.cabal  xmonad-session-rc  xmonad.hs
xmonad/.xmonad/lib/: StatusBar.hs
xscreensaver/: .xscreensaver  .xss.Xresources  listen_for_lock.py
