name:                xmoconf
version:             0.1.0.0
synopsis:            My XMonad Configuration
license:             PublicDomain
author:              Andrew Barbarello
maintainer:          andrew.barbarello@outlook.com
copyright:           Andrew Barbarello
category:            Simple
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-config
  hs-source-dirs:      ., lib
  main-is:             xmonad.hs
  other-modules:       StatusBar
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, xmonad, xmonad-contrib, unix, X11
  ghc-options:         -i -ilib -main-is main -O2

executable getTrayerGeom
  hs-source-dirs:     .
  main-is:            getTrayerGeom.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5, gtk, X11, mtl
  ghc-options:        -O2
